<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_my"
    tools:context="com.example.andrew.simpleactivity.MyActivity">


    <TextView
        style="@style/Header"
        android:text="@string/levelZero"
        android:id="@+id/textView"
        />


    <Button
        style="@style/StatusButton"
        android:text="@string/status"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button"
        android:paddingTop="@dimen/medium_text_vertical_padding">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:showDividers="middle|beginning"
            android:id="@+id/LinearLayoutMain">


            <LinearLayout
                style="@style/LinearLayoutHorizontal">

                <TextView
                    style="@style/MediumText"
                    android:text="@string/levelOne"
                    android:id="@+id/textView2" />

                <TextView
                    style="@style/MediumText.bold.match_parent"
                    android:text="@string/levelOneParam"
                    android:id="@+id/textView9" />
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayoutHorizontal">

                <TextView
                    style="@style/MediumText"
                    android:text="@string/levelTwo"
                    android:id="@+id/textView3" />

                <TextView
                    style="@style/MediumText.bold.match_parent"
                    android:text="@string/levelTwoParam"
                    android:id="@+id/textView10" />
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayoutHorizontal">

                <TextView
                    style="@style/MediumText"
                    android:text="@string/levelThree"
                    android:id="@+id/textView4" />

                <TextView
                    style="@style/MediumText.bold.match_parent"
                    android:text="@string/levelThreeParam"
                    android:id="@+id/textView11" />
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayoutHorizontal">


                <TextView
                    style="@style/MediumText"
                    android:text="@string/levelFour"
                    android:id="@+id/textView5" />

                <TextView
                    style="@style/MediumText.bold.match_parent"
                    android:text="@string/levelFourParam"
                    android:id="@+id/textView12" />
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayoutHorizontal">

                <TextView
                    style="@style/MediumText"
                    android:text="@string/levelFive"
                    android:id="@+id/textView6" />

                <TextView
                    style="@style/MediumText.bold.match_parent"
                    android:text="@string/levelFiveParam"
                    android:id="@+id/textView13" />
            </LinearLayout>

            <TextView
                style="@style/MediumText.bold"
                android:text="@string/levelSix"
                android:id="@+id/textView7"
                />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horizontalScrollView"
                >

                <LinearLayout
                    style="@style/LinearLayoutHorizontal">

                    <ImageView
                        style="@style/Image"
                        android:id="@+id/imageView"
                         />

                    <ImageView
                        style="@style/Image"
                        android:id="@+id/imageView2"
                         />

                    <ImageView
                        style="@style/Image"
                        android:id="@+id/imageView3"
                        />

                    <ImageView
                        style="@style/Image"
                        android:id="@+id/imageView4"
                        />


                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
